; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_hook.c_hook_install.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_hook.c_hook_install.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hooks_mu = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @hook_install(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @malloc_mutex_lock(i32* %6, i32* @hooks_mu)
  %8 = load i32*, i32** %4, align 8
  %9 = call i8* @hook_install_locked(i32* %8)
  store i8* %9, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @tsd_global_slow_inc(i32* %13)
  br label %15

15:                                               ; preds = %12, %2
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @malloc_mutex_unlock(i32* %16, i32* @hooks_mu)
  %18 = load i8*, i8** %5, align 8
  ret i8* %18
}

declare dso_local i32 @malloc_mutex_lock(i32*, i32*) #1

declare dso_local i8* @hook_install_locked(i32*) #1

declare dso_local i32 @tsd_global_slow_inc(i32*) #1

declare dso_local i32 @malloc_mutex_unlock(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
